@@ -29,6 +29,7 @@ performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
   constraint and the corresponding clique information is globally added
 - improved methods SCIPlpiGetBInv{Row,Col,ACol} for row representation in SoPlex LP interface
+- fasten repropagation for set-packing and -partitioning constraints
 
 interface
 - SCIPcalcMIR() gets an additional parameter "cutrank" which returns the rank of the aggregation; via SCIProwChgRank()
